@@ -1,21 +1,23 @@
 package com.backoffice.app.application.utils;
 
+import com.backoffice.app.AppApplication;
 import org.springframework.core.io.ClassPathResource;
-import org.springframework.util.ResourceUtils;
 
 import java.io.IOException;
-import java.nio.file.Files;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 
 import static com.backoffice.app.application.constants.ApplicationConstants.FILE_SEPARATOR;
 
 public class FileUtils {
 
     public static String getSql(String fileName) {
-        try {
 
-            var file = new ClassPathResource("sql".concat(FILE_SEPARATOR).concat(fileName)).getFile();
-            //var file = ResourceUtils.getFile("classpath:sql".concat(FILE_SEPARATOR).concat(fileName));
-            return new String(Files.readAllBytes(file.toPath()));
+        ClassPathResource resource = new ClassPathResource(FILE_SEPARATOR.concat("sql")
+                .concat(FILE_SEPARATOR).concat(fileName), AppApplication.class);
+
+        try (InputStream inputStream = resource.getInputStream()) {
+            return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
